# bureau

./: .gitignore  AGENTS.md  Makefile  README.md  pyproject.toml
.github/: grabowski-required-checks.json
.github/workflows/: registry-registration-preflight.yml  rpu-v1-t024-closeout-diagnostic.yml  sync-weltgewebe-source.yml  tmp-diagnose-t004-closeout.yml  tmp-pr475-diff.yml  tmp-pr475-validation-log.yml  tmp-rcga-live-exploration.yml  tmp-rcga-t003-validation-log.yml  validate.yml
docs/: approval-path-v1.md  architecture.md  bur-2026-004-t003-legacy-module-dependency-audit.md  bur-2026-004-t004-console-entrypoint-consolidation-plan.md  bur-2026-004-t005-ops-packaging-decision.md  bureau-ai-authority-boundary-v1.md  bureau-approval-path-v1.md  bureau-live-register-v1.md  bureau-operator-intake-v1.md  bureau-runtime-automation-contract-v1.md  bureau-runtime-identity-v1.md  bureau-runtime-observation-v1.md  bureau-runtime-refresh-v1.md  bureau-state-root-artifacts-v1.md  bureau-status-capsule-v1.md  bureau-what-now-v1.md  cabinet-bridge-import-review-contract-v0.md  cabinet-bridge-import-review-contract-v0.policy.json  concurrency.md  gemini-proposal-lane-preflight-v1.md  gemini-proposal-review-lane-v1.md  grabowski-restplan-v2-implementation-log.md  grabowski-restplan-v2.md  operations.md  operator-integration-loop-v1-t005.md  ownership.md  rbae-v1-t004.required-reading-profiles.md  rbae-v1-t005.agent-workbench-surfaces.md  rbae-v1-t006.agent-outcome-evaluation-loop.md  rbae-v1-t007.agent-workbench-promotion-gate.md  repobrief-agent-change-plan-contract-v1.md  repobrief-agent-code-task-evidence-matrix-v1.md  repobrief-code-impact-map-v1.md  repobrief-verifiable-agent-memory-v1.md  rlens-agent-ecosystem-integration-v1-implementation-record.md  rlens-context-policy-v1.md  runtime-automation-contract.md  semantah-usefulness-registration-v2.md
docs/architecture/: failure-domain-capacity-v1.md  resource-lifecycle-contract-v1.md
docs/contracts/: open-pr-task-metadata-v1.md
docs/evidence/: rcga-live-calibration-receipt-20260713.md  rcga-live-evaluation-20260713.json  rcga-live-goldset-20260713.json  rcga-selective-adoption-closeout-20260713.md
docs/plans/: agent-frontier-governor-v1.md  agent-run-evidence-ref-placement-decision-v1.md  agent-run-evidence-reference-design-v1.md  bureau-boundary-ops-v1.md  bureau-deterministic-ops-v1.md  bureau-runtime-and-repo-orchestration-v1.md  bureau-runtime-automation-baseline-v1.md  bureau-truth-model-v2.md  cabinet-coherence-frontier-gemini-lane-v1.md  cabinet-ecosystem-intelligence-masterplan-v1.md  cabinet-read-only-ecosystem-signal-ingest-v0.md  chronik-coding-memory-v1.md  chronik-heimlern-outcome-bridge-v1.md  commonworld-public-globe-v1.md  discovery-source-plan-v1.md  grabowski-agent-facing-contract-v1.md  grabowski-grip-roadmap-rest-v1.md  grabowski-operator-grips-pr-slices-v1.md  grabowski-operator-surface-v1.md  heimgewebe-resilienz-v1.md  heimlern-optimization-plan-v1.md  leitstand-operator-observability-hardening-v1.md  leitstand-visualization-layer-v1.md  operator-ecosystem-redundancy-v1.md  operator-ecosystem-t001-bureau-scheduler-consolidation-v1.md  operator-integration-loop-v1.md  operator-learning-axis-v1.md  (+22 more)
notes/: rbv1-t001-done.txt  semantah-usefulness-registration-v2.md
ops/: install-bureau-runtime.py
registry/: queue.json
schemas/: agent-frontier-report.v1.schema.json  agent-memory-claim.v1.schema.json  agent-run-evidence-ref.v1.schema.json  execution-envelope.v1.schema.json  initiative.v1.schema.json  queue.v1.schema.json  receipt.v1.schema.json  resource-lifecycle.v1.schema.json  resource.v1.schema.json  source-snapshot.v1.schema.json  source.v1.schema.json  task.v1.schema.json
tests/: conftest.py  test_agent_frontier.py  test_agent_frontier_systemd.py  test_agent_run_evidence_ref.py  test_agent_run_evidence_review_document.py  test_approval.py  test_approval_path.py  test_bridge_policy_file.py  test_bridge_policy_validator_file.py  test_bureau.py  test_cabinet_bridge.py  test_cabinet_bridge_import_review_doc.py  test_cabinet_bridge_preview.py  test_cabinet_bridge_receipt.py  test_cabinet_bridge_review.py  test_cabinet_frontier_reader.py  test_cabinet_promotion_write.py  test_canonical_registry_runtime.py  test_claim_guard.py  test_closure.py  test_closure_bridge.py  test_closure_open_pr_observation.py  test_codex_bridge.py  test_coordination_scope.py  test_cycle_contract.py  test_eco_graph.py  test_entrypoint_inventory.py  test_gemini_preflight.py  test_gemini_review_lane.py  test_generation_closeout.py  test_github_observer.py  test_github_observer_binding_guard_v2.py  test_github_repository_identifiers.py  test_lease_contract.py  test_lease_migration.py  test_live_register.py  test_operator_intake.py  test_ops_packaging_decision.py  test_pr_closure_bridge.py  test_queue_reconcile.py  (+29 more)
(+954 files in other folders)
