[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "heimgewebe-bureau"
version = "0.2.0"
description = "Deterministic coordination and parallel task dispatch for Heimgewebe"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Alexander Mohr"}]
dependencies = ["jsonschema>=4.22,<5"]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.15"]

[project.scripts]
bureau = "bureau.cli:main"
bureau-source-pr-bridge = "bureau.source_pr_bridge:main"
bureau-closure = "bureau.closure:main"
bureau-closure-runner = "bureau.closure_runner:main"
bureau-pr-closure-bridge = "bureau.pr_closure_bridge:main"
bureau-agent-frontier = "bureau.agent_frontier:main"
bureau-agent-scout = "bureau.agent_frontier:main"
bureau-codex-bridge = "bureau.codex_bridge:main"
bureau-review-steward = "bureau.review_steward:main"
bureau-cabinet-bridge-preview = "bureau.cabinet_bridge_preview:main"
bureau-cabinet-bridge-review = "bureau.cabinet_bridge_review:main"
bureau-cabinet-bridge-receipt = "bureau.cabinet_bridge_receipt:main"
bureau-cabinet-bridge-import-policy = "bureau.cabinet_bridge_import_policy:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.ruff.lint.per-file-ignores]
"src/bureau/legacy.py" = ["E501", "RUF005", "SIM105", "SIM118", "UP022"]
