[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "heimgewebe-bureau"
version = "0.2.1"
description = "Deterministic coordination and parallel task dispatch for Heimgewebe"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Alexander Mohr"}]
dependencies = ["jsonschema>=4.22,<5"]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.15"]

[project.scripts]
bureau = "bureau.cli:main"
bureau-source-pr-bridge = "bureau.source_pr_bridge:main"
bureau-status-capsule = "bureau.status_capsule:main"
bureau-closure = "bureau.closure:main"
bureau-closure-runner = "bureau.closure_runner:main"
bureau-pr-task-finish = "bureau.task_finish:main"
bureau-agent-frontier = "bureau.agent_frontier:main"
bureau-agent-scout = "bureau.agent_frontier:main"
bureau-codex-bridge = "bureau.codex_bridge:main"
bureau-review-steward = "bureau.review_steward:main"
bureau-systemkatalog-bridge-preview = "bureau.cabinet_bridge_preview:main"
bureau-systemkatalog-bridge-review = "bureau.cabinet_bridge_review:main"
bureau-systemkatalog-bridge-receipt = "bureau.cabinet_bridge_receipt:main"
bureau-systemkatalog-bridge-import-policy = "bureau.cabinet_bridge_import_policy:main"
bureau-systemkatalog-frontier-reader = "bureau.cabinet_frontier_reader:main"
bureau-gemini-preflight = "bureau.gemini_preflight:main"
bureau-gemini-review-lane = "bureau.gemini_review_lane:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.ruff.lint.per-file-ignores]
"src/bureau/github_observer.py" = ["E501"]
"src/bureau/legacy.py" = ["E501", "RUF005", "SIM105", "SIM118", "UP022"]
